Mon Sep 23 19:01:48 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/apps/tsql.c src/dblib/dbutil.c
	  src/odbc/odbc.c src/tds/mem.c src/tds/token.c
	  src/ctlib/ctutil.c:
	- Do away with tds_reset_msg_info.  Move the important
	  parts into tds_free_msg.
	- Relocate call to tds_free_msg() in tds_process_msg() so that
	  we can safely reuse the msg_info structure to call the
	  client message handler if required.

Mon Sep 23 18:55:48 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/util.c:
	- in tdsdump_close(), make it allowable to close even if not
	  already opened.
	- in tdsdump_open(), always try to close before opening so
	  we don't leak file descriptors.

Mon Sep 23 11:09:16 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/server/server.h:
	- standardize format of server.h include file.

Mon Sep 23 08:17:28 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c: fix core by DataManager
	* src/server/Makefile.am: distribute even server.h
	* freetds.spec.in:
	- add doc package for userguide
	- add *.la files to rpm
	- split ODBC driver to unixodbc package

Mon Sep 23 00:06:36 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/replacements.h.in:
	- Include stdarg.h in replacements.h so we don't choke on the
	  vasprintf() prototype.
	* src/tds/convert.c:
	- Include replacements.h from convert.c.  Fix inclusion of config.h.

Sun Sep 22 23:31:25 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/.cvsignore:
	- Ignore generated replacements.h

Sun Sep 22 23:28:03 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* configure.in src/replacements/Makefile.am src/tds/convert.c
	  include/replacements.h.in (added) src/replacements/atoll.c (added)
	  include/replacements.h (removed)
	- Migrate replacement atoll() to replacements convenience library.

Sun Sep 22 22:50:14 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/replacements/Makefile.am:
	- Include replacement function source files in distribution.
